# namulizer

./: .gitignore  LICENSE  README.md  STATUSLOG.md  pyproject.toml
samples/: sample_paper.tex
src/namulizer/: __init__.py  cli.py  document.py  md_parser.py  pdf2md.py  renderer.py
src/namulizer/parser/: __init__.py  base.py  md_parser.py  pdf_parser.py  tex_parser.py
src/namulizer/renderer/: __init__.py  html_renderer.py
src/namulizer/template/: namuwiki.html
tests/: test_arxiv_support.py  test_cli.py  test_md_parser.py  test_pdf2md.py  test_pdf_parser.py  test_renderer.py  test_tex_parser.py
