[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "namulizer"
version = "0.3.0"
description = "Convert academic papers (PDF/Markdown) into self-contained NamuWiki-style HTML"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "namulizer contributors" }
]
dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "markdown-it-py>=3.0",
  "mdit-py-plugins>=0.4",
  "linkify-it-py>=2.0",
  "pymupdf4llm>=0.0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
markitdown = [
  "markitdown[pdf]>=0.1"
]

[project.scripts]
namulizer = "namulizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"namulizer" = ["template/namuwiki.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
